# cython

./: .codespellrc  .coveragerc  .editorconfig  .gitattributes  .gitignore  .gitmodules  .hgignore  .hgtags  .mailmap  .packit.yaml  .readthedocs.yaml  .travis.yml  0001-split-init-strings.patchmani  2to3-fixers.txt  AGENTS.md  BUILD  BUILD.bazel  CHANGES.rst  CHANGES_pyrex.txt  CONTRIBUTING.md  COPYING.rst  COPYING.txt  Cython.spec  INSTALL.rst  INSTALL.txt  LICENSE.txt  MANIFEST  MANIFEST.in  Makefile  NOTES  README  README.md  README.rst  README.txt  TODO  ToDo.txt  USAGE.txt  appveyor.yml  conf.py  cygdb.py  (+29 more)
.github/: FUNDING.yml  cibuildwheel-requirement.txt  code-of-conduct.md  dependabot.yml  report-handling-manual.md
.github/ISSUE_TEMPLATE/: 1_bug_report.yml  2_feature_request.yml  3_blank_issue.md  3_blank_issue.yml  blank.md  bug_report.md  bug_report.yml  config.yml  custom.md  feature_request.md  feature_request.yml  issue_template.md  other.md
.github/workflows/: benchmarks-weekly.yml  benchmarks.yml  ci-job.yml  ci.yml  compiled_python.yml  coverage.yml  nightly-wheels.yml  sanitizers.yml  scorecards.yml  wheel-manylinux.yml  wheels.yml
.wheel_build_constraints/: constraints.txt
Cython/: CodeWriter.py  Coverage.py  Debugging.py  LZSS.py  Setuptools.py  Shadow.py  Shadow.pyi  ShadowWithStubs.py  ShadowWithStubs.pyi  StringIOTree.pxd  StringIOTree.py  TestUtils.py  Utils.pxd  Utils.py  __init__.py  __init__.pyi  inspect.py  minivect
Cython/Compiler/: #Options.py#  .#Options.py  AnalysedTreeTransforms.py  Annotate.py  AutoDocTransforms.py  Backend.py  Buffer.py  Builtin.py  Cache.py  CmdLine.py  Code.pxd  Code.py  CodeGeneration.py  ControlFlow.py  CythonScope.py  Dataclass.py  DebugFlags.py  Dependencies.py  Errors.py  ExprNodes.py  FlowControl.pxd  FlowControl.py  FusedNode.py  FusedNode.pyx  Future.py  Importer.py  Interpreter.py  JediTyper.py  Lexicon.py  Main.py  MatchCaseNodes.py  MemoryView.py  MessageText.py  ModuleNode.py  Naming.py  Nodes.py  NoexceptInference.py  NumpySupport.py  Optimize.py  Options.py  (+27 more)
Cython/Debugger/: Cygdb.py  DebugWriter.py  cygdb.py  libcython.py  libpython.py
Cython/Distutils/: __init__.py  build_ext.py  extension.py  old_build_ext.py
Cython/DistutilsOld/: __init__.py
Cython/Includes/: numpy.pxd  openmp.pxd  python.pxd  python2.5.pxd  python_buffer.pxd  python_bytes.pxd  python_cobject.pxd  python_complex.pxd  python_dict.pxd  python_exc.pxd  python_float.pxd  python_function.pxd  python_getargs.pxd  python_instance.pxd  python_int.pxd  python_list.pxd  python_long.pxd  python_mapping.pxd  python_mem.pxd  python_method.pxd  python_module.pxd  python_number.pxd  python_object.pxd  python_pycapsule.pxd  python_ref.pxd  python_sequence.pxd  python_set.pxd  python_string.pxd  python_tuple.pxd  python_type.pxd  python_unicode.pxd  python_version.pxd  python_weakref.pxd  stdio.pxd  stdlib.pxd  stl.pxd
Cython/Mac/: DarwinSystem.py  Finder_Std_Suite.py  MPW_Misc_Suite.py  MacSystem.py  MacUtils.py  Makefile  PS_Misc_Suite.py  PyServerMain.py  TS_Misc_Suite.py  _Filemodule_patched.c  setup.py
Cython/Parser/: ConcreteSyntaxTree.pyx  Grammar  Grammar.lark
Cython/Plex/: Actions.pxd  Actions.py  DFA.pxd  DFA.py  Errors.py  Lexicons.py  Machines.pxd  Machines.py  Regexps.py  (+7 more)
Demos/: Makefile  Makefile.nodistutils  README.rst  Readme_demos.rst  Setup.py  integrate0.py  integrate1.pyx  integrate2.pyx  integrate_timing.py  numeric_demo.pyx  numpy_demo.pyx  overflow_perf.pyx  overflow_perf_run.py  primes.pyx  pyprimes.py  run_numeric_demo.py  run_primes.py  run_spam.py  setup.py  spam.pyx
Doc/: About.html  FAQ.html  extension_types.html  index.html  overview.html  primes.c  sharing.html  special_methods.html
Includes/: __cython__.pxd  numpy.pxd  python.pxd  python2.5.pxd  python_bool.pxd  python_exc.pxd  python_float.pxi  python_function.pxd  python_instance.pxi  python_int.pxi  python_iterator.pxi  python_list.pxi  python_long.pxd  python_mem.pxi  python_method.pxd  python_number.pxi  python_object.pxd  python_parse.pxd  python_ref.pxd  python_tuple.pxd  python_type.pxi  stdlib.pxi
Tools/: cevaltrace.py  ci-run.sh  cystdlib.py  cython-epydoc.py  cython-generate-lexicon.py  cython-generate-shadow-py.py  cython-generate-shadow-pyi.py  cython-mode.el  cython-numpy-mode-kate.xml  cython.st  download_release.py  dump_github_issues.py  escape_url.py  examine_sanitizer_logs.py  gen_tests_for_posix_pxds.py  jedi-typer.py  jedityper.py  kate.diff  make_dataclass_tests.py  pyrex-mode.el  rules.bzl  upload-wheels.sh
appveyor/: install.ps1  run_with_env.cmd
cython_shadow/: README.md  cython.py  pyproject.toml
cython_shadow/Cython/: Shadow.py  Shadow.pyi  __init__.py  __init__.pyi
cython_test/: Rectangle.cpp  Rectangle.h  rect.pyx  setup.py
docs/: CONTRIBUTING.md  CONTRIBUTING.rst  CONTRIBUTING.txt  Makefile  README  README.md  README.rst  TODO  TODO.rst  conf.py  docs-requirements.txt  early_binding_for_speed.rst  extension_types.rst  external_C_code.rst  index.rst  language_basics.rst  limitations.rst  make.bat  numpy_tutorial.rst  overview.rst  profiling_tutorial.rst  pxd_package.rst  pyrex_differences.rst  sharing_declarations.rst  source_files_and_compilation.rst  special_methods.rst  todo.txt  tutorial.rst  welcome.rst  wrapping_CPlusPlus.rst
pyximport/: README  README.rst  Setup.py  __init__.py  _pyximport.py  _pyximport2.py  _pyximport3.py  common.py  pyxbuild.py  pyximport.py
sphinxext/: cython_highlighting.py
src/: compilation.rst  extension_types.rst  interfacing_with_other_code.rst  language_basics.rst  limitations.rst  overview.rst  special_mention.rst
test/: deleteme.py
tests/: bugs.txt  cygwin_bugs.txt  exclude_limited_api_rerun.txt  graal_bugs.txt  limited_api_314_bugs.txt  limited_api_bugs.txt  limited_api_bugs_38.txt  macos_cpp_bugs.txt  memoryview_tests.txt  pypy2_bugs.txt  pypy_bugs.txt  pypy_crash_bugs.txt  pypy_implementation_detail_bugs.txt  python_312.txt  test_in_limited_api.txt  travis_macos_cpp_bugs.txt  tsan_bugs.txt  ubsan_bugs.txt  windows_arm_bugs.txt  windows_bugs.txt  windows_bugs_39.txt
(+3115 files in other folders)
