[build-system]
requires = ["setuptools"]

[tool.cibuildwheel]
build-verbosity = 2
skip = ["pp*", "gp*", "cp31?t-*", "cp36*", "cp37*", "cp3[!9]*aarch64", "cp3[!9]*i686", "cp3[!9]*win32", "cp3[!9]*win_arm64"]
enable = ["cpython-prerelease"]
# test-command = "make test"

[tool.cibuildwheel.linux]
archs = ["x86_64", "aarch64", "i686"]
repair-wheel-command = "auditwheel repair --strip -w {dest_dir} {wheel}"

[tool.cibuildwheel.linux.environment]
CFLAGS = "-O3 -g0 -pipe -fPIC -march=core2 -mno-ssse3"
AR = "gcc-ar"
NM = "gcc-nm"
RANLIB = "gcc-ranlib"

[[tool.cibuildwheel.overrides]]
select = "*aarch64"
environment = {CFLAGS = "-O3 -g0 -pipe -fPIC -march=armv8-a -mtune=cortex-a72", AR = "gcc-ar", NM = "gcc-nm", RANLIB = "gcc-ranlib", CYTHON_LIMITED_API=true }

[[tool.cibuildwheel.overrides]]
select = "*i686"
environment = {CFLAGS = "-O3 -g0 -pipe -fPIC -march=core2 -mno-ssse3",  AR = "gcc-ar", NM = "gcc-nm", RANLIB = "gcc-ranlib", CYTHON_LIMITED_API=true }

[tool.cibuildwheel.windows]
archs = ["AMD64", "x86", "ARM64"]

[[tool.cibuildwheel.overrides]]
select = "*win32"
environment = {CYTHON_LIMITED_API = "true"}

[[tool.cibuildwheel.overrides]]
select = "*win_arm64"
environment = {CYTHON_LIMITED_API = "true"}

[tool.cibuildwheel.macos]
# https://cibuildwheel.readthedocs.io/en/stable/faq/#what-to-provide suggests to provide
# x86_64 and one of universal2 or arm64 wheels.  x86_64 is still required by older pips,
# so additional arm64 wheels should suffice.
archs = ["x86_64", "arm64"]
