[build-system]
requires = ["setuptools"]

[tool.cibuildwheel]
build-verbosity = 2
skip = [
    # Unsupported versions:
    "cp36*", "cp37*", "cp38*",
    # These platforms are served with the generic Python wheel:
    "pp*",
    "gp*",
    "cp31?t-*",
]
enable = ["cpython-prerelease"]
# As a quick sanity check, run Cython on some of its own sources
# (not a full rebuild though, because it uses the local files and not the installed wheel).
test-command = [
    "cython {project}/Cython/Compiler/Visitor.py",
    "cython {project}/Cython/Compiler/Scanning.py",
    "cython {project}/Cython/Compiler/Parsing.py",
]

[tool.cibuildwheel.linux]
archs = ["x86_64", "aarch64", "i686", "armv7l"]
repair-wheel-command = "auditwheel repair --strip -w {dest_dir} {wheel}"

[tool.cibuildwheel.linux.environment]
CFLAGS = "-O3 -g0 -pipe -fPIC -march=core2 -mno-ssse3"
AR = "gcc-ar"
NM = "gcc-nm"
RANLIB = "gcc-ranlib"

[[tool.cibuildwheel.overrides]]
select = "*aarch64"
environment = {CFLAGS = "-O3 -g0 -pipe -fPIC -march=armv8-a -mtune=cortex-a72", AR = "gcc-ar", NM = "gcc-nm", RANLIB = "gcc-ranlib"}

[[tool.cibuildwheel.overrides]]
select = "*armv7l"
environment.CFLAGS = "-O3 -g0 -pipe -fPIC"

[[tool.cibuildwheel.overrides]]
select = "*i686 *musllinux* *win32 *win_arm64 *macosx_x86_64 *armv7l"
inherit.environment = "append"
environment.CYTHON_LIMITED_API = "true"
inherit.test-requires = "append"
test-requires = ["abi3audit>=0.0.25"]
inherit.test-command = "append"
test-command = ["abi3audit --strict --report {wheel}"]

[tool.cibuildwheel.windows]
archs = ["AMD64", "x86", "ARM64"]

[tool.cibuildwheel.macos]
# https://cibuildwheel.readthedocs.io/en/stable/faq/#what-to-provide suggests to provide
# x86_64 and one of universal2 or arm64 wheels.  x86_64 is still required by older pips,
# so additional arm64 wheels should suffice.
archs = ["x86_64", "arm64"]
