[flake8]
max-complexity = 10

[pycodestyle]
exclude = .git,build,__pycache__,venv*,TEST*,tests/run/test*.py,Cython/Debugger/libpython.py
max-line-length = 150
format = pylint
# See https://pycodestyle.pycqa.org/en/latest/intro.html#configuration
select =
    E711, E713, E714, E501, W291, W292, E502, E703,
    # indentation
    E101, E111, E112, E113, E117
    E121, E125, E129,
    # E114, E115, E116, E122,
    # whitespace
    E211, E223, E224, E227, E228, E242, E261, E273, E274, E275,
    # E201, E202, E203, E211, E265
    # E303, E306,
    W1, W2, W3
#ignore = W, E
ignore =
    W504,
    # W504 line break after binary operator
    S001,
    # S001 found module formatter
    E226,
    # E226 missing whitespace around operator[run]

[coverage:run]
branch = True
parallel = True
concurrency = multiprocessing,thread
include = Cython/*
source = Cython
omit = Test*

[metadata]
license_files =
    LICENSE.txt
    COPYING.txt
